--- a/index.html
+++ b/index.html
@@ -4,18 +4,78 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- logo /favicon -->
     <link
       rel="icon"
       type="image/svg"
       sizes="32x32"
       href="./images/favicon.svg" />
-    <script defer src="./app.js"></script>
+    <!-- stylesheets -->
     <link rel="stylesheet" href="style.css" />
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Poppins&family=Press+Start+2P&display=swap"
+      rel="stylesheet" />
+    <!-- scripts -->
+    <script defer src="./app.js"></script>
+    <!-- title -->
     <title>Rock Paper Scissors</title>
   </head>
   <body>
-    <header>
+    <header class="background">
       <h1>Rock Paper Scissors</h1>
     </header>
+    <main class="container">
+      <section class="des-txt">
+        <h3 class="rules"><em>rules:</em></h3>
+        <p>
+          <strong>three possible outcomes:</strong> a draw, a win or a loss.
+          <br />
+          <strong>score:</strong> first to 5 infinite repeat on ties. <br />
+          <strong>how to win:</strong> <br />
+          <b>W1:</b> rock crushes scissors <br />
+          <b>W2:</b> paper covers rock <br />
+          <b>W3:</b> scissors cuts paper <br />
+        </p>
+      </section>
+
+      <section class="des-txt">
+        <h3 class="rules"><em>instructions:</em></h3>
+        <p><strong>Open Terminal on Mac:</strong></p>
+        <div class="keys">
+          <div class="box1">
+            <img class="option" src="./images/option.png" alt="option" />
+          </div>
+
+          <div class="box1">
+            <img class="command" src="./images/command.png" alt="command" />
+          </div>
+
+          <div class="box1">
+            <p class="j-key">J</p>
+          </div>
+        </div>
+        <p><strong>Open Terminal on Windows:</strong></p>
+        <div class="keys">
+          <div class="box2">
+            <img class="shift" src="./images/shift.png" alt="option" />
+          </div>
+
+          <div class="box1">
+            <img class="command" src="./images/command.png" alt="command" />
+          </div>
+
+          <div class="box1">
+            <p class="j-key">J</p>
+          </div>
+        </div>
+        <p><strong>click to play:</strong></p>
+        <div class="play">
+          <button class="box3" onclick="game()">play</button>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
