--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <section class="des-txt">
         <h3 class="rules"><em>instructions:</em></h3>
-        <p><strong>Open Terminal on Mac:</strong></p>
+        <p><strong>Open Devtools Console on Mac:</strong></p>
         <div class="keys">
           <div class="box1">
             <img class="option" src="./images/option.png" alt="option" />
@@ -57,7 +57,7 @@
             <p class="j-key">J</p>
           </div>
         </div>
-        <p><strong>Open Terminal on Windows:</strong></p>
+        <p><strong>Open Devtools Console on Windows:</strong></p>
         <div class="keys">
           <div class="box2">
             <img class="shift" src="./images/shift.png" alt="option" />
