--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
         <p><strong>click to play:</strong></p>
         <div class="play">
-          <button class="box3" onclick="game()">play</button>
+          <button id="btn" class="box3">play</button>
         </div>
       </section>
     </main>
