--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       sizes="32x32"
       href="./images/favicon.svg" />
     <!-- stylesheets -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Poppins&family=Press+Start+2P&display=swap"
       rel="stylesheet" />
     <!-- scripts -->
-    <script defer src="./app.js"></script>
+    <script defer src="./js/app.js"></script>
     <!-- title -->
     <title>Rock Paper Scissors</title>
   </head>
@@ -43,7 +43,9 @@
 
       <section class="des-txt">
         <h3 class="rules"><em>instructions:</em></h3>
+
         <p><strong>Open Devtools Console on Mac:</strong></p>
+
         <div class="keys">
           <div class="box1">
             <img class="option" src="./images/option.png" alt="option" />
@@ -57,7 +59,9 @@
             <p class="j-key">J</p>
           </div>
         </div>
+
         <p><strong>Open Devtools Console on Windows:</strong></p>
+
         <div class="keys">
           <div class="box2">
             <img class="shift" src="./images/shift.png" alt="option" />
@@ -71,6 +75,7 @@
             <p class="j-key">J</p>
           </div>
         </div>
+
         <p><strong>click to play:</strong></p>
         <div class="play">
           <button id="btn" class="box3">play</button>
