Setup For Game Layout

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <p><strong>click to play:</strong></p>
         <div class="play">
-          <button id="btn" class="box3">play</button>
+          <a href="./game.html"><span id="play-btn">play</span></a>
         </div>
       </section>
     </main>
