--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
           <a href="./game.html"><span id="play-btn">play</span></a>
         </div>
       </section>
+      <span></span>
     </main>
   </body>
 </html>
