Setup For Game Display

--- a/game.html
+++ b/game.html
@@ -12,6 +12,7 @@
       href="./images/favicon.svg" />
     <!-- stylesheets -->
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="styles/terminal.css" />
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,7 +21,8 @@
       rel="stylesheet" />
     <!-- scripts -->
     <script defer src="./js/app.js"></script>
-    <title>Document</title>
+    <script defer src="./js/terminal.js"></script>
+    <title>Rock Paper Scissors</title>
   </head>
   <body>
     <header class="background">
@@ -29,15 +31,14 @@
     <main class="container">
       <section class="des-txt">
         <div id="terminal">
-          <div id="header">Terminal</div>
-
           <div id="window">
-            root@computer: Press &lt;ENTER&gt; to generate your hacker
-            name<cursor1>_</cursor1><br /><br />
+            root@playGame: Press &lt;ENTER&gt; to play<span class="cursor1"
+              >_</span
+            ><br /><br />
             <div id="hackerName">Hacker Name</div>
 
             <div id="clear">
-              <br />Press &lt;ENTER&gt; to clear<cursor2>_</cursor2>
+              <br />Press &lt;ENTER&gt; to clear<span class="cursor2">_</span>
             </div>
           </div>
         </div>
