--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <p><strong>click to play:</strong></p>
         <div class="play">
-          <a href="./game.html"><span id="play-btn">play</span></a>
+          <a href="./game.html"><span id="play-btn">game</span></a>
         </div>
       </section>
       <span></span>
