--- a/game.html
+++ b/game.html
@@ -43,7 +43,6 @@
           </div>
         </div>
       </section>
-
       <div class="game-container hidden">
         <section class="des-txt" id="game-btns">
           <div class="btn-container">
@@ -80,15 +79,13 @@
             </div>
           </div>
         </section>
-
         <div class="play">
           <a><span id="restart-btn">restart</span></a>
         </div>
       </div>
-
       <div class="main-container">
         <section class="des-txt" id="start-btn">
-          <p><strong>click to play or return home:</strong></p>
+          <p><strong>click play or return home:</strong></p>
           <div class="des-btn">
             <div class="play">
               <a><span id="start-game-btn">play</span></a>
