Rock, Paper, Scissors Button Input .btn
Final Layout Before Adding Text to Terminal Screen and Adding Responsive design.

--- a/game.html
+++ b/game.html
@@ -49,7 +49,7 @@
             <p><strong>rock:</strong></p>
 
             <div class="box4">
-              <button class="rock" id="rock">
+              <button class="rock btn" id="rock">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                   <!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
                   <path
@@ -61,7 +61,7 @@
           <div class="btn-container">
             <p><strong>paper:</strong></p>
             <div class="box4">
-              <button class="paper" id="paper">
+              <button class="paper btn" id="paper">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                   <!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
                   <path
@@ -73,7 +73,7 @@
           <div class="btn-container">
             <p><strong>scissors:</strong></p>
             <div class="box4">
-              <button class="scissors" id="scissors">
+              <button class="scissors btn" id="scissors">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                   <!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
                   <path
