--- a/game.html
+++ b/game.html
@@ -32,14 +32,33 @@
       <section class="des-txt">
         <div id="terminal">
           <div id="window">
-            root@playGame: Press &lt;ENTER&gt; to play<span class="cursor1"
+            root@playGame: Press &lt;PLAY&gt; to start new game<span
+              class="cursor1"
               >_</span
-            ><br /><br />
-            <div id="hackerName">Hacker Name</div>
-
-            <div id="clear">
-              <br />Press &lt;ENTER&gt; to clear<span class="cursor2">_</span>
-            </div>
+            >
+            <section id="test">
+              <div class="statistics">
+                <div>
+                  <p>&lt;CHOICE&gt;</p>
+                  <p>p: scissors</p>
+                  <p>c: rock</p>
+                </div>
+                <div>
+                  <p>&lt;SCORE&gt;</p>
+                  <p>player: 5</p>
+                  <p>computer: 4</p>
+                </div>
+                <div>
+                  <p>&lt;STATS&gt;</p>
+                  <p>round: 5</p>
+                  <p>w/l r: 100%</p>
+                </div>
+              </div>
+              <div class="result">
+                <p>&lt;RESULT&gt;</p>
+                <p>Press to clear<span class="cursor2">_</span></p>
+              </div>
+            </section>
           </div>
         </div>
       </section>
@@ -47,7 +66,6 @@
         <section class="des-txt" id="game-btns">
           <div class="btn-container">
             <p><strong>rock:</strong></p>
-
             <div class="box4">
               <button class="rock btn" id="rock">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
