--- a/game.html
+++ b/game.html
@@ -43,23 +43,23 @@
                 <div class="statistics">
                   <div>
                     <p>&lt;CHOICE&gt;</p>
-                    <p id="d-pc">p: scissors</p>
-                    <p id="d-cc">c: rock</p>
+                    <p id="d-pc">p:</p>
+                    <p id="d-cc">c:</p>
                   </div>
                   <div>
                     <p>&lt;SCORE&gt;</p>
-                    <p id="d-player">player: 5</p>
-                    <p id="d-comp">computer: 4</p>
+                    <p id="d-ps">player:</p>
+                    <p id="d-cs">computer:</p>
                   </div>
                   <div>
                     <p>&lt;STATS&gt;</p>
-                    <p id="d-round">round: 5</p>
-                    <p id="d-win-loss">w/l r: 100%</p>
+                    <p id="d-r">round:</p>
+                    <p id="d-w-l">w/l r:</p>
                   </div>
                 </div>
                 <div class="result">
                   <p>&lt;RESULT&gt;</p>
-                  <p>Press to clear<span class="cursor2">_</span></p>
+                  <p id="result-txt"></p>
                 </div>
               </section>
             </div>
