--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <!-- logo /favicon -->
     <link
       rel="icon"
-      type="image/svg"
+      type="image/png"
       sizes="32x32"
-      href="./images/favicon.svg" />
+      href="../images/favicon.png" />
     <!-- stylesheets -->
     <link rel="stylesheet" href="./styles/style.css" />
     <!-- fonts -->
