--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="../images/favicon.png" />
+      href="./images/favicon.png" />
     <!-- stylesheets -->
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="styles/terminal.css" />
