--- a/game.html
+++ b/game.html
@@ -58,8 +58,10 @@
                   </div>
                 </div>
                 <div class="result">
-                  <p>&lt;RESULT&gt;</p>
-                  <p id="result-txt"></p>
+                  <p id="re-head">&lt;RESULT&gt;</p>
+                  <span id="par"></span>
+                  <span class="cursor2">_</span>
+                  <p class="inline" id="result-txt"></p>
                 </div>
               </section>
             </div>
