--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <b>W3:</b> scissors cuts paper <br />
         </p>
       </section>
-      <section class="des-txt">
+      <section class="des-txt pad-b">
         <h3 class="rules"><em>instructions:</em></h3>
         <p><strong>Open Devtools Console on Mac:</strong></p>
         <div class="keys">
@@ -65,11 +65,12 @@
             <p class="j-key">J</p>
           </div>
         </div>
-        <p><strong>click to play:</strong></p>
-        <div class="play">
-          <a href="./game.html"><span id="play-btn">game</span></a>
-        </div>
       </section>
+
+      <div class="play home-play-btn">
+        <a href="./game.html"><span id="play-btn">game</span></a>
+      </div>
+
       <span></span>
     </main>
   </body>
