Rework and Removed Type Animation

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
       <section class="des-txt">
         <h3 class="rules"><em>rules:</em></h3>
         <p>
-          <strong>three possible outcomes:</strong> a draw, a win or a loss.
+          <strong>three possible outcomes:</strong> <br />
+          a draw, a win or a loss.
           <br />
-          <strong>score:</strong> first to 5 infinite repeat on ties. <br />
+          <strong>score:</strong> <br />
+          first to 5 infinite repeat on ties. <br />
           <strong>how to win:</strong> <br />
           <b>W1:</b> rock crushes scissors <br />
           <b>W2:</b> paper covers rock <br />
