--- a/game.html
+++ b/game.html
@@ -21,7 +21,7 @@
       rel="stylesheet" />
     <!-- scripts -->
     <script defer src="./js/app.js"></script>
-    <script defer src="./js/terminal.js"></script>
+    <script defer src="./js/start.js"></script>
     <title>Rock Paper Scissors</title>
   </head>
   <body>
