--- a/game.html
+++ b/game.html
@@ -29,7 +29,7 @@
       <h1>Rock Paper Scissors</h1>
     </header>
     <main class="container">
-      <section class="des-txt">
+      <section class="term">
         <div id="terminal">
           <div id="window">
             <h4 class="inline">
@@ -68,6 +68,7 @@
           </div>
         </div>
       </section>
+
       <div class="game-container hidden">
         <section class="des-txt" id="game-btns">
           <div class="btn-container">
