Adding Cursor To Terminal Output Text

--- a/game.html
+++ b/game.html
@@ -62,6 +62,7 @@
                   <p id="re-head">&lt;RESULT&gt;</p>
 
                   <p class="inline" id="result-txt"></p>
+                  <span class="cursor1">_</span>
                 </div>
               </section>
             </div>
