Added Relevant Display Buttons and Prompts

--- a/game.html
+++ b/game.html
@@ -109,10 +109,11 @@
             </div>
           </div>
         </section>
-        <div class="play">
-          <a href="./game.html"><span id="restart-btn">restart</span></a>
-        </div>
       </div>
+      <div class="play hidden">
+        <a><span id="restart-btn">play again</span></a>
+      </div>
+
       <div class="main-container">
         <section class="des-txt" id="start-btn">
           <p><strong>click play or return home:</strong></p>
